[package]
name = "resonite-link-client"
version = "0.1.0"
edition = "2024"
description = "An unofficial Rust client for the Resonite Link API."
license = "MIT"
repository = "https://github.com/Earthmark/ResoLink-rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
tokio = { version =  "*", features = ["full"] }
tokio-tungstenite = "*"
rand = "0.9"
futures-util = "0.3.31"
thiserror = "*"
log = "*"

[dev-dependencies]
env_logger = "0.11.8"

[[example]]
name = "read_root"
